ajout de satellizer et de restangular , intergration du login et register et logout

--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -42,7 +42,7 @@
                             <li><a ui-sref="myContact">Contact</a></li>
                             <li class="divider"></li>
                             <li><a ui-sref="compte">Paramètres du compte</a></li>
-                            <li><a ui-sref="logout">Se déconnecter</a></li>
+                            <li><a href="#" ng-click="logout()">Se déconnecter</a></li>
                         </ul>
                     </li>
                     <li class="active"><a href="#" ui-sref="create"><span>Créer un événement</span></a></li>
