--- a/public/templates/auth/login.html
+++ b/public/templates/auth/login.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <form class="form-signin" ng-submit="login(auth)">
+    <form class="form-signin" ng-submit="login()">
         <h2 class="text-center">Connectez-vous.</h2>
         <h4 class="text-center"><a href="" ui-sref="register">Ou créez un compte.</a></h4>
         <div class="form-group">
-            <input type="text" class="form-control" ng-model="auth.login" placeholder="Adresse email" required/>
+            <input type="text" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
         </div>
         <div class="form-group">
-            <input type="password" ng-model="auth.motDePasse" placeholder="Mot de passe" class="form-control"/>
+            <input type="password" ng-model="auth.password" placeholder="Mot de passe" class="form-control"/>
         </div>
         <div class="form-group text-center message">
             {{message}}
