--- a/public/templates/auth/register.html
+++ b/public/templates/auth/register.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <form class="form-signin" ng-submit="signin(auth)">
+    <form class="form-signin" ng-submit="signup()">
         <h2 class="text-center">Ouvrir un compte.</h2>
         <h4 class="text-center">Vous avez déjà un compte?</h4>
         <h4 class="text-center"><a href="" ui-sref="login">Connectez-vous.</a></h4>
         <div class="form-group">
-            <input type="text" class="form-control" ng-model="auth.login" placeholder="Adresse email" required/>
+            <input type="text" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
         </div>
         <div class="form-group">
-            <input type="password" ng-model="auth.motDePasse" placeholder="Mot de passe" class="form-control"/>
+            <input type="password" ng-model="auth.password" placeholder="Mot de passe" class="form-control"/>
         </div>
         <div class="form-group text-center message">
             {{message}}
