--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -4,8 +4,8 @@
     <div class="col-lg-9">
         <div class="row no-padding card item" ng-repeat="e in events">
             <div class="col-lg-3">
-                <div ui-sref="details({nom:e.titre})" class="image" style="height:100px; cursor: pointer">
-                    <img src="{{e.image_baniere}}" class="img-responsive" alt="{{e.titre}}"/>
+                <div ui-sref="details({nom:e.name})" class="image" style="height:100px; cursor: pointer">
+                    <img ng-src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
                 </div>
                 <div class="price">
                     Gratuit
@@ -13,14 +13,14 @@
             </div>
             <div class="col-lg-9">
                 <div class="item-9" ui-sref="details({nom:e.titre})">
-                    <div class="date">{{e.date_debut}}</div>
-                    <div class="titre">{{e.titre}}</div>
+                    <div class="date">{{e.start_date}}</div>
+                    <div class="titre">{{e.name}}</div>
                     <div class="lieu" style="position: absolute;bottom: 0;">{{e.adresse.ville}}, {{e.adresse.pays}}</div>
                 </div>
                 <div class="card-action">
                     <div class="tag">
-                        <a href="#">#{{e.confidentialite.type_evenement}}</a>
-                        <a href="#">#{{e.confidentialite.theme}}</a>
+                        <a href="#">#{{e.event_topic.name}}</a>
+                        <a href="#">#{{e.event_topic.name}}</a>
                     </div>
                     <div class="action">
                         <a href="#" class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
