--- a/public/templates/auth/reset.html
+++ b/public/templates/auth/reset.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form class="form-signin" ng-submit="reset(auth)">
-        <h2 class="text-center">Reinitialiser le mot de passe.</h2>
-        <p class="text-default">
+        <h2 class="text-center" translate >Reinitialiser le mot de passe.</h2>
+        <p class="text-default" translate >
             Saisissez votre adresse e-mail et nous vous enverrons un lien par e-mail pour réinitialiser votre mot de passe.
         </p>
         <div class="form-group">
@@ -11,10 +11,10 @@
             {{message}}
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-main"> Reinitialiser le mot de passe</button>
+            <button type="submit" class="btn btn-primary btn-main" translate > Reinitialiser le mot de passe</button>
         </div>
         <div class="text-center" style="margin-top: 15px">
-            <a href="" ui-sref="login">Connectez-vous</a>
+            <a href="" ui-sref="login" translate >Connectez-vous</a>
         </div>
 
     </form>
