--- a/public/templates/event/header-events.html
+++ b/public/templates/event/header-events.html
@@ -4,7 +4,7 @@
             <div class="navbar-header">
                 <!-- Mobile Toggle Menu Button -->
                 <a href="#" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-                <a class="navbar-brand logo" href="index.html">
+                <a class="navbar-brand logo" ui-sref="home">
                     EventMboa
                 </a>
             </div>
@@ -15,11 +15,11 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class=""><a ui-sref="events"><span>Parcourir</span></a></li>
-                    <li class=""><a href="#"><span>Aide</span></a></li>
-                    <li class=""><a href="#" ui-sref="register"><span>Ouvrir un compte</span></a></li>
-                    <li class=""><a href="#" ui-sref="login"><span>Se connecter</span></a></li>
-                    <li class=""><a href="#" ui-sref="create"><span>Créer un événement</span></a></li>
+                    <li class=""><a ui-sref="events"><span translate>Parcourir</span></a></li>
+                    <li class=""><a href="#"><span translate>Aide</span></a></li>
+                    <li class=""><a href="#" ui-sref="register"><span translate>Ouvrir un compte</span></a></li>
+                    <li class=""><a href="#" ui-sref="login"><span translate>Se connecter</span></a></li>
+                    <li class=""><a href="#" ui-sref="create"><span translate>Créer un événement</span></a></li>
                 </ul>
             </div>
         </nav>
