--- a/public/templates/user/gestion/index-gestion.html
+++ b/public/templates/user/gestion/index-gestion.html
@@ -6,21 +6,21 @@
                 <h4>{{event.date_debut}}|{{event.date_fin}}</h4>
             </div>
             <div class="col-lg-4 col-sm-4" style="margin-top: 3%; text-align: right;">
-                <button class="btn btn-main btn-reverse">Afficher</button>
+                <button class="btn btn-main btn-reverse" translate>Afficher</button>
             </div>
         </div>
     </div>
 
     <div class="banner">
         <div class="container" style="padding-left: 0px">
-            <div class="choice" ui-sref="create({id:event.id,target:'modifier'})">
+            <div class="choice" ui-sref="create({id:event.id,target:'modifier'})" translate>
                 Modifier
             </div>
-            <div class="choice" ui-sref="create({id:event.id,target:'visualisation'})">
+            <div class="choice" ui-sref="create({id:event.id,target:'visualisation'})" translate>
                 Design
             </div>
-            <div class="choice active" ui-sref="gestion({id:event.id})">
-                Gerer
+            <div class="choice active" ui-sref="gestion({id:event.id})" translate>
+                Gérer
             </div>
         </div>
     </div>
@@ -33,19 +33,19 @@
 
                         <h4 class="">
                             <a ui-href="panneau({id:event.id})">
-                                <i class="fa fa-home"></i> Panneau de gestion</a>
+                                <i class="fa fa-home"></i> <ff translate >Panneau de gestion</ff></a>
                         </h4>
                     </div>
                     <div class="panel">
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse1">
-                                    <i class="fa fa-volume-off"></i> Inviter</a>
+                                    <i class="fa fa-volume-off"></i> <ff translate >Inviter</ff></a>
                             </h4>
                         </div>
                         <div id="collapse1" class="panel-collapse collapse in">
                             <ul class="nav">
-                                <li ng-class="{'active':choix=='invitation'}" ng-click="choix='invitation'"><a ui-sref="invitation({id:event.id})">Invitations par mail</a></li>
+                                <li ng-class="{'active':choix=='invitation'}" ng-click="choix='invitation'"><a ui-sref="invitation({id:event.id})" translate>Invitations par mail</a></li>
                             </ul>
                         </div>
                     </div>
@@ -53,12 +53,12 @@
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse2">
-                                    <i class="fa fa-commenting-o"></i> Communiquer</a>
+                                    <i class="fa fa-commenting-o"></i> <ff translate >Communiquer</ff></a>
                             </h4>
                         </div>
                         <div id="collapse2" class="panel-collapse collapse in">
                             <ul class="nav">
-                                <li ng-class="{'active':choix=='email-participant'}" ng-click="choix='email-participant'"><a ui-sref="email-participant">E-mails aux participants</a></li>
+                                <li ng-class="{'active':choix=='email-participant'}" ng-click="choix='email-participant'"><a ui-sref="email-participant" translate>E-mails aux participants</a></li>
                             </ul>
                         </div>
                     </div>
