--- a/public/templates/auth/login.html
+++ b/public/templates/auth/login.html
@@ -1,9 +1,9 @@
 <div class="container">
     <form class="form-signin" ng-submit="login()">
-        <h2 class="text-center">Connectez-vous.</h2>
-        <h4 class="text-center"><a href="" ui-sref="register">Ou créez un compte.</a></h4>
+        <h2 class="text-center" translate >Connectez-vous.</h2>
+        <h4 class="text-center"><a href="" ui-sref="register" translate >Ou créez un compte.</a></h4>
         <div class="form-group">
-            <input type="text" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
+            <input type="email" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
         </div>
         <div class="form-group">
             <input type="password" ng-model="auth.password" placeholder="Mot de passe" class="form-control"/>
@@ -12,10 +12,10 @@
             {{message}}
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-main btn-green"> Connectez-vous</button>
+            <button type="submit" class="btn btn-primary btn-main btn-green" translate > Connectez-vous</button>
         </div>
         <div style="margin-top: 15px;text-align: center">
-            <a href="" ui-sref="reset">Mot de passe oublié?</a>
+            <a href="" ui-sref="reset" translate >Mot de passe oublié?</a>
         </div>
     </form>
 
