--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -1,26 +1,30 @@
 <section>
-    <h1>Evénements</h1>
+
 
     <div class="col-lg-9">
-        <div class="row no-padding card item" ng-repeat="e in events">
+        <h1 class="sz" style="padding-left: 15px;font-weight: bold;" translate>Douala, Cameroun Événements pour vous </h1>
+        <div class="row no-padding card item"
+             style="margin:0 15px 15px"
+             dir-paginate="e in events |filter:searchKey | orderBy : '-name' : true| itemsPerPage: par_page "
+                >
             <div class="col-lg-3">
                 <div ui-sref="details({nom:e.name})" class="image" style="height:100px; cursor: pointer">
                     <img ng-src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
                 </div>
-                <div class="price">
-                    Gratuit
+                <div class="price" translate>
+                    {{e.tickets[0].amount}} F
                 </div>
             </div>
             <div class="col-lg-9">
-                <div class="item-9" ui-sref="details({nom:e.titre})">
-                    <div class="date">{{e.start_date}}</div>
+                <div class="item-9" ui-sref="details({nom:e.name})">
+                    <div class="date">du {{e.date_debut}} au {{e.date_fin}}</div>
                     <div class="titre">{{e.name}}</div>
                     <div class="lieu" style="position: absolute;bottom: 0;">{{e.adresse.ville}}, {{e.adresse.pays}}</div>
                 </div>
                 <div class="card-action">
                     <div class="tag">
                         <a href="#">#{{e.event_topic.name}}</a>
-                        <a href="#">#{{e.event_topic.name}}</a>
+                        <a href="#">#{{e.event_type.name}}</a>
                     </div>
                     <div class="action">
                         <a href="#" class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
@@ -28,6 +32,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="text-center" >
+            <dir-pagination-controls></dir-pagination-controls>
         </div>
     </div>
 
