--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -29,11 +29,11 @@
                 <ul class="nav">
                     <h3>Restons connectés</h3>
                     <li><a href=""><i class="fa fa-envelope"></i> Contacter l'assistance</a></li>
-                    <li><a href=""><i class="fa fa-facebook"></i> Facebook</a></li>
-                    <li><a href=""><i class="fa fa-twitter"></i> Twitter</a></li>
+                    <li><a href="https://www.facebook.com/eventmboa/"><i class="fa fa-facebook"></i> Facebook</a></li>
+                    <li><a href="https://twitter.com/Event_Mboa"><i class="fa fa-twitter"></i> Twitter</a></li>
                     <li><a href=""><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-                    <li><a href=""><i class="fa fa-instagram"></i> Instagram</a></li>
-                    <li><a href=""><i class="fa fa-google-plus"></i> Gougle+</a></li>
+                    <li><a href="https://www.instagram.com/eventmboa/"><i class="fa fa-instagram"></i> Instagram</a></li>
+                    <li><a href="https://plus.google.com/u/0/108139670497252318920"><i class="fa fa-google-plus"></i> Gougle+</a></li>
                 </ul>
             </div>
         </div>
