--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -4,26 +4,32 @@
             <div class="navbar-header">
                 <!-- Mobile Toggle Menu Button -->
                 <a href="#" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-                <a class="navbar-brand logo" href="index.html">
+                <a class="navbar-brand logo" ui-sref="home">
                     EventMboa
                 </a>
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" ng-if="!lieu">
                     <li class=""><a href="#" ui-sref="events" data-nav-section="home"><span>Parcourir</span></a></li>
                 </ul>
             </div>
+            <div style="float: left; width: 30%" ng-if="lieu">
+                <form ng-submit="searchEvent(key)">
+                    <input type="text" ng-model="key" required class="input" placeholder="Recherche d'événements"/>
+                </form>
+            </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class=""><a href="#"><span>Aide</span></a></li>
-                    <li class=""><a href="#" ui-sref="register"><span>Ouvrir un compte</span></a></li>
-                    <li class=""><a href="#" ui-sref="login"><span>Se connecter</span></a></li>
-                    <li class="dropdown">
+                    <li class="" ng-if="lieu"><a ui-sref="events"><span translate>Parcourir</span></a></li>
+                    <li class=""><a href="#"><span translate>Aide</span></a></li>
+                    <li class="" ng-if="!loguer"><a href="#" ui-sref="register"><span translate >Ouvrir un compte</span></a></li>
+                    <li class="" ng-if="!loguer"><a href="#" ui-sref="login"><span translate >Se connecter</span></a></li>
+                    <li class="dropdown" ng-if="loguer">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="/#"><i class="fa fa-user"></i>&nbsp;
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a ui-sref="billet">
                                     <div class="row">
-                                        <div class="col-lg-9">Billets</div>
+                                        <div class="col-lg-9" translate >Billets</div>
                                         <div class="col-lg-3">4</div>
                                     </div>
                                 </a>
@@ -31,21 +37,22 @@
                             <li>
                                 <a ui-sref="save">
                                     <div class="row">
-                                        <div class="col-lg-9">Sauvegardés</div>
+                                        <div class="col-lg-9" translate >Sauvegardés</div>
                                         <div class="col-lg-3"></div>
                                     </div>
                                 </a>
                             </li>
                             <li class="divider"></li>
-                            <li><a ui-sref="myEvent">Gérer les événements</a></li>
-                            <li><a ui-sref="profil">Profil d'organisateur</a></li>
-                            <li><a ui-sref="myContact">Contact</a></li>
+                            <li><a ui-sref="myEvent" translate >Gérer les événements</a></li>
+                            <li><a ui-sref="profil" translate >Profil d'organisateur</a></li>
+                            <li><a ui-sref="myContact" translate >Contact</a></li>
                             <li class="divider"></li>
-                            <li><a ui-sref="compte">Paramètres du compte</a></li>
-                            <li><a href="#" ng-click="logout()">Se déconnecter</a></li>
+                            <li><a ui-sref="compte" translate >Paramètres du compte</a></li>
+                            <li><a href="#" ng-click="logout()" translate >Se déconnecter</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a href="#" ui-sref="create"><span>Créer un événement</span></a></li>
+                    <li class="active" ng-if="loguer"><a href="#" ui-sref="create"><span>Créer un événement</span></a></li>
+                    <li class="active" ng-if="!loguer"><a href="#" ng-click="create_event()"><span>Créer un événement</span></a></li>
                 </ul>
             </div>
         </nav>
