--- a/public/templates/user/gestion/invitation.html
+++ b/public/templates/user/gestion/invitation.html
@@ -1,5 +1,5 @@
 <section id="compte">
-    <h1 class="bold">Gérer les invitations par e-mail</h1>
+    <h1 class="bold" translate>Gérer les invitations par e-mail</h1>
     <div class="row">
         <div class="col-lg-12">
             <button class="btn-main btn" data-toggle="modal" href="/#inviationModal">créer une invitation</button>
@@ -8,14 +8,14 @@
     </div>
 
     <div class="row">
-        <h4>Ventes par type de billet</h4>
+        <h4 translate >Ventes par type de billet</h4>
         <table class="table">
             <thead>
-                <th>Type de billet</th>
-                <th>Prix</th>
-                <th>Vendu</th>
-                <th>Statut</th>
-                <th>Fin des ventes</th>
+                <th translate >Type de billet</th>
+                <th translate >Prix</th>
+                <th translate >Vendu</th>
+                <th translate >Statut</th>
+                <th translate >Fin des ventes</th>
             </thead>
             <tbody>
                 <tr ng-repeat="c in commandes|orderBy:'-date':true">
@@ -41,21 +41,21 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label>Titulaire <span class="requis">*</span></label>
+                            <label><ff translate >Titulaire</ff> <span class="requis">*</span></label>
                             <input type="text" ng-model="no.titulaire" placeholder="Titulaire du numéro" class="form-control"/>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label>Numéro <span class="requis">*</span></label>
+                            <label><ff translate >Numéro</ff> <span class="requis">*</span></label>
                             <input type="text" ng-model="no.numero" placeholder="Numéro" class="form-control"/>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-main" type="submit">Enregistrer</button>
-                <button id="close" class="btn btn-main hide" data-dismiss="modal">Fermer</button>
+                <button class="btn btn-main" type="submit" translate >Enregistrer</button>
+                <button id="close" class="btn btn-main hide" data-dismiss="modal" translate >Fermer</button>
             </div>
         </form><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
