--- a/public/templates/event/index.html
+++ b/public/templates/event/index.html
@@ -19,18 +19,18 @@
 _________________________________________________________ -->
                 <ul class="nav navbar text-uppercase">
                     <li class="dropdown">
-                        <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Catégorie <i class="fa fa-angle-down pull-right"></i></a>
+                        <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Catégories <i class="fa fa-angle-down pull-right"></i></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="c in categories |orderBy:'-name':true">
-                                <a ui-sref="events({target:c.name+'/'+c.id,id:'topic'})">{{c.name}}</a>
+                                <a ui-sref="events({target:c.name,id:'topic'})">{{c.name}}</a>
                             </li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Type <i class="fa fa-angle-down pull-right"></i></a>
+                        <a href="javascript: void(0)" class="dropdown-toggle" data-toggle="dropdown">Types <i class="fa fa-angle-down pull-right"></i></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="t in types |orderBy:'-name':true">
-                                <a ui-sref="events({target:t.name+'/'+t.id,id:'type'})">{{t.name}}</a>
+                                <a ui-sref="events({target:t.name,id:'type'})">{{t.name}}</a>
                             </li>
                         </ul>
                     </li>
