--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -2,29 +2,34 @@
 
 
     <div class="col-lg-9">
-        <h1 class="sz" style="padding-left: 15px;font-weight: bold;" translate>Douala, Cameroun Événements pour vous </h1>
+        <h1 class="sz" style="padding-left: 15px;font-weight: bold;" ng-bind-html="titre"></h1>
+        <div class="row">
+            <div class="col-lg-4 pull-right">
+                <input type="text" ng-model="searchKeys" required class="form-control" placeholder="Recherche d'événements"/>
+            </div>
+        </div>
         <div class="row no-padding card item"
              style="margin:0 15px 15px"
              dir-paginate="e in events |filter:searchKey | orderBy : '-name' : true| itemsPerPage: par_page "
                 >
             <div class="col-lg-3">
-                <div ui-sref="details({nom:e.name})" class="image" style="height:100px; cursor: pointer">
+                <div ui-sref="details({nom:e.name+'/'+e.id})" class="image" style="height:100px; cursor: pointer">
                     <img ng-src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
                 </div>
                 <div class="price" translate>
-                    {{e.tickets[0].amount}} F
+                    {{e.tickets[0].amount}} Fcfa
                 </div>
             </div>
             <div class="col-lg-9">
-                <div class="item-9" ui-sref="details({nom:e.name})">
+                <div class="item-9" ui-sref="details({nom:e.name+'/'+e.id})">
                     <div class="date">du {{e.date_debut}} au {{e.date_fin}}</div>
                     <div class="titre">{{e.name}}</div>
-                    <div class="lieu" style="position: absolute;bottom: 0;">{{e.adresse.ville}}, {{e.adresse.pays}}</div>
+                    <div class="lieu" style="position: absolute;bottom: 0;">{{e.town.name}}, {{e.town.country.name}}</div>
                 </div>
                 <div class="card-action">
                     <div class="tag">
-                        <a href="#">#{{e.event_topic.name}}</a>
-                        <a href="#">#{{e.event_type.name}}</a>
+                        <a ui-sref="events({target:e.event_topic.name,id:'topic'})">#{{e.event_topic.name}}</a>
+                        <a ui-sref="events({target:e.event_type.name,id:'type'})">#{{e.event_type.name}}</a>
                     </div>
                     <div class="action">
                         <a href="#" class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
