--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -35,13 +35,13 @@
 
 <section id="form">
     <div class="container">
-        <form class="row no-padding" ng-submit="search(search)">
+        <form class="row no-padding" ng-submit="search(key)">
             <div class="col-lg-4" style="padding-left: 15px">
-                <input type="text" ng-model="search.name" class="form-control" placeholder="Rechercher des événements ou des catégories"/></div>
+                <input type="text" ng-model="key.titre" class="form-control" placeholder="Rechercher des événements ou des catégories"/></div>
             <div class="col-lg-3">
-                <input type="text" ng-model="search.ville" class="form-control" placeholder="Entrez la ville ou le lieu"/></div>
+                <input type="text" ng-model="key.ville" class="form-control" placeholder="Entrez la ville ou le lieu"/></div>
             <div class="col-lg-3">
-                <select class="form-control" ng-model="search.date" ng-options="d.value as d.name for d in date_deb">
+                <select class="form-control" ng-model="key.date" ng-options="d.value as d.name for d in date_deb|orderBy:'-value':true">
                     <option value="" translate>Toutes les dates</option>
                 </select>
             </div>
@@ -59,7 +59,7 @@
                 <div class="card">
                     <div class="card-image">
                         <img class="img-responsive" src="{{e.banner_picture}}">
-                        <span class="card-title" translate>{{e.tickets[0].amount}} F</span>
+                        <span class="card-title" translate>{{e.tickets[0].amount}} Fcfa</span>
                     </div>
                     <div class="card-content">
                         <!--<ul class="nav">-->
@@ -70,7 +70,7 @@
                         <div class="date">{{e.date_debut}}</div>
                         <div class="titre">
                             {{e.name|limitTo:50}}</div>
-                        <div class="lieu">{{e.adresse.ville}}, {{e.adresse.pays}}</div>
+                        <div class="lieu">{{e.town.name}}, {{e.town.country.name}}</div>
                     </div>
 
                     <div class="card-action">
@@ -101,11 +101,10 @@
 
             <div class="content_middle">
                 <div class="col-md-4 col2" ng-repeat="c in categories | orderBy:'-update_at':true|limitTo:9">
-                    <a href="#" ui-sref="events({target:c.nom})" class="b-link-stroke b-animate-go  thickbox">
+                    <a href="#" ui-sref="events({target:c.name,id:'type'})" class="b-link-stroke b-animate-go  thickbox">
                         <img src="{{c.image}}" class="img-responsive" alt="{{c.name}}"/>
                         <div class="b-wrapper">
                             <h2 class="b-animate b-from-left    b-delay03 ">{{c.name}}</h2>
-                            <p class="b-animate b-from-right    b-delay03 ">{{c.description}}</p>
                         </div>
                     </a>
                 </div>
